cmake_minimum_required(VERSION 3.18)
project(gb_task1)
find_package(Catch2 REQUIRED)
set(CMAKE_CXX_STANDARD 14)
add_executable(main main.cpp)
add_executable(testLLRB testLLRB.cpp)
add_executable(testFibHeap testFibHeap.cpp)
target_link_libraries(testLLRB Catch2::Catch2)
target_link_libraries(testFibHeap Catch2::Catch2)
include(CTest)
include(Catch)
catch_discover_tests(testLLRB testFibHeap)
